Add Spring Boot Actuator dependency and configure application properties for server and database settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,35 @@
 spring.application.name=brevity
+
+# 服務器配置
+server.port=${PORT:8080}
+
+# Actuator配置
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
+
+# 日誌配置
+logging.level.root=INFO
+logging.level.com.jay.brevity=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# PostgreSQL 數據庫配置（帶默認值，支持本地開發）
+# spring.datasource.url=jdbc:postgresql://dpg-d1dq9rqdbo4c73e69aig-a.singapore-postgres.render.com:5432/brevity_dev
+# spring.datasource.username=brevity_dev_user
+# spring.datasource.password=O1VuPgvo0YPeE31wQ3rfGmWRXsLtWAzR
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate 配置
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+# 連接池配置
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
